--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clsx": "^1.2.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-custom-scroll": "^5.0.0",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.1",
